# 010-movieinfo-hook

./: .gitignore  CMakeLists.txt  README.md
cmake/: VersionOffsets.in
src/: avs2-log.h  main.cc  offsets.h  parse_http_link.cc  parse_http_link.h
versions/31/: LDJ-010-2024082600.cmake
versions/32/: LDJ-010-20245011400.cmake
